--- a/pages/about.html
+++ b/pages/about.html
@@ -83,6 +83,11 @@
                     Đặt Bàn
                   </a>
                 </li>
+                <li>
+                  <a href="../pages/login.html" class="btn primary-btn">
+                    Đăng nhập
+                  </a>
+                </li>
               </div>
             </ul>
           </nav>
