--- a/pages/booking.html
+++ b/pages/booking.html
@@ -82,6 +82,11 @@
                     Đặt Bàn
                   </a>
                 </li>
+                <li>
+                  <a href="../pages/login.html" class="btn primary-btn">
+                    Đăng nhập
+                  </a>
+                </li>
               </div>
             </ul>
           </nav>
@@ -89,6 +94,38 @@
       </div>
     </div>
     <!-- End Nav Section -->
+    <div class="banners-container">
+      <div class="banners">
+        <div class="banner error">
+          <div class="banner-icon">
+            <i
+              data-eva="alert-circle-outline"
+              data-eva-fill="#ffffff"
+              data-eva-height="48"
+              data-eva-width="48"
+            ></i>
+          </div>
+          <div class="banner-message">Một số trường còn trống!!</div>
+          <div class="banner-close" onclick="hideBanners()">
+            <i data-eva="close-outline" data-eva-fill="#ffffff"></i>
+          </div>
+        </div>
+        <div class="banner success">
+          <div class="banner-icon">
+            <i
+              data-eva="checkmark-circle-outline"
+              data-eva-fill="#ffffff"
+              data-eva-height="48"
+              data-eva-width="48"
+            ></i>
+          </div>
+          <div class="banner-message">Gửi thành công!!</div>
+          <div class="banner-close" onclick="hideBanners()">
+            <i data-eva="close-outline" data-eva-fill="#ffffff"></i>
+          </div>
+        </div>
+      </div>
+    </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">
       <i class="fa fa-arrow-up"></i>
     </button>
@@ -120,7 +157,7 @@
               </select>
             </div>
             <div class="form__group">
-              <label for="guestNumber">Mã khách hàng</label>
+              <label for="guestNumber">Số lượng người</label>
               <input
                 type="number"
                 id="guestNumber"
@@ -151,7 +188,9 @@
               <label for="note">Ghi chú</label>
               <textarea name="Note" id="note" rows="4"></textarea>
             </div>
-            <button type="submit" class="btn primary-btn">Đặt Bàn</button>
+            <button type="submit" class="btn primary-btn" onclick="send()">
+              Đặt Bàn
+            </button>
           </form>
         </div>
       </div>
