--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,6 +82,11 @@
                     Đặt Bàn
                   </a>
                 </li>
+                <li>
+                  <a href="../pages/login.html" class="btn primary-btn">
+                    Đăng nhập
+                  </a>
+                </li>
               </div>
             </ul>
           </nav>
@@ -101,7 +106,7 @@
               data-eva-width="48"
             ></i>
           </div>
-          <div class="banner-message">Some field are empty</div>
+          <div class="banner-message">Một số trường còn trống</div>
           <div class="banner-close" onclick="hideBanners()">
             <i data-eva="close-outline" data-eva-fill="#ffffff"></i>
           </div>
@@ -115,9 +120,7 @@
               data-eva-width="48"
             ></i>
           </div>
-          <div class="banner-message">
-            Success! You'll receive our response email soon!
-          </div>
+          <div class="banner-message">Gửi thành công!!</div>
           <div class="banner-close" onclick="hideBanners()">
             <i data-eva="close-outline" data-eva-fill="#ffffff"></i>
           </div>
