--- a/pages/menu.html
+++ b/pages/menu.html
@@ -82,6 +82,11 @@
                     Đặt Bàn
                   </a>
                 </li>
+                <li>
+                  <a href="../pages/login.html" class="btn primary-btn">
+                    Đăng nhập
+                  </a>
+                </li>
               </div>
             </ul>
           </nav>
