--- a/pages/menu.html
+++ b/pages/menu.html
@@ -117,7 +117,7 @@
               <h3 class="ourSpecicals__item__tittle">
                 Kimbap - Món nổi tiếng Hàn Quốc
               </h3>
-              <h4 class="ourSpecicals__item__price">$18</h4>
+              <h4 class="ourSpecicals__item__price">180000đ</h4>
               <div class="ourSpecicals__item__stars">
                 <img src="../img/3star.svg" alt="stars" />
               </div>
@@ -131,7 +131,7 @@
               <h3 class="ourSpecicals__item__tittle">
                 Cơm trộn Hàn Quốc Bibimbap
               </h3>
-              <h4 class="ourSpecicals__item__price">$20</h4>
+              <h4 class="ourSpecicals__item__price">200000đ</h4>
               <div class="ourSpecicals__item__stars">
                 <img src="../img/3star.svg" alt="stars" />
               </div>
@@ -152,7 +152,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Canh bò</h3>
-              <h3 class="dishGrid__item__price">$20</h3>
+              <h3 class="dishGrid__item__price">200000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -164,7 +164,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Mỳ Lạnh</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__price">50000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -176,7 +176,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Tokbokki</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__price">50000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -197,7 +197,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Cháo gà DakJuk</h3>
-              <h3 class="dishGrid__item__price">$15</h3>
+              <h3 class="dishGrid__item__price">160000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -209,7 +209,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Bánh KimChi</h3>
-              <h3 class="dishGrid__item__price">$10</h3>
+              <h3 class="dishGrid__item__price">60000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -221,7 +221,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Hot Dog</h3>
-              <h3 class="dishGrid__item__price">$10</h3>
+              <h3 class="dishGrid__item__price">60000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -233,7 +233,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Bánh PanCake</h3>
-              <h3 class="dishGrid__item__price">$13</h3>
+              <h3 class="dishGrid__item__price">90000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -245,7 +245,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Mỳ Jajangmyeon</h3>
-              <h3 class="dishGrid__item__price">$17</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -266,7 +266,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Gà rán sốt cay</h3>
-              <h3 class="dishGrid__item__price">$18</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -278,7 +278,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Gà sốt Phomai</h3>
-              <h3 class="dishGrid__item__price">$18</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -290,7 +290,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Miến cuộn</h3>
-              <h3 class="dishGrid__item__price">$12</h3>
+              <h3 class="dishGrid__item__price">50000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -302,7 +302,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Sườn nướng</h3>
-              <h3 class="dishGrid__item__price">$22</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -314,7 +314,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Canh khoai tây</h3>
-              <h3 class="dishGrid__item__price">$18</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -335,7 +335,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Canh gà hầm</h3>
-              <h3 class="dishGrid__item__price">$22</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -347,7 +347,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Canh đậu tương</h3>
-              <h3 class="dishGrid__item__price">$22</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -359,7 +359,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Súp đậu kho</h3>
-              <h3 class="dishGrid__item__price">$19</h3>
+              <h3 class="dishGrid__item__price">180000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -371,7 +371,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Canh bò</h3>
-              <h3 class="dishGrid__item__price">$20</h3>
+              <h3 class="dishGrid__item__price">200000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -383,7 +383,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Cua ngâm tương</h3>
-              <h3 class="dishGrid__item__price">$25</h3>
+              <h3 class="dishGrid__item__price">170000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
