--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>K-Food</title>
-    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/globalStyle.css" />
     <link rel="stylesheet" href="../styles/components.css" />
@@ -167,7 +166,7 @@
               <h2 class="ourSpecials__item__title">
                 Cơm trộn Hàn Quốc Bibimbap
               </h2>
-              <h3 class="ourSpecials__item__price">$20</h3>
+              <h3 class="ourSpecials__item__price">200000đ</h3>
               <div class="ourSpecials__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -187,7 +186,7 @@
               <h2 class="ourSpecials__item__title">
                 Kimbap - Món nổi tiếng Hàn Quốc
               </h2>
-              <h3 class="ourSpecials__item__price">$18</h3>
+              <h3 class="ourSpecials__item__price">180000đ</h3>
               <div class="ourSpecials__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -226,7 +225,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Canh Bò</h3>
-              <h3 class="dishGrid_item_price">$20</h3>
+              <h3 class="dishGrid_item_price">200000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -238,7 +237,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Mỳ Lạnh</h3>
-              <h3 class="dishGrid_item_price">$12</h3>
+              <h3 class="dishGrid_item_price">50000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -250,7 +249,7 @@
             </div>
             <div class="dishGrid__item__info">
               <h3 class="dishGrid__item__title">Tokbokki</h3>
-              <h3 class="dishGrid_item_price">$10</h3>
+              <h3 class="dishGrid_item_price">60000đ</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -279,8 +278,8 @@
             <h3 class="discount__text">20% OFF</h3>
             <h3 class="discount__title">Khuyến Mại Đặc Biệt</h3>
             <h3 class="discount__price">
-              <span class="discount__oldPrice">$45</span>
-              <span class="discount__newPrice">$36</span>
+              <span class="discount__oldPrice">230000đ</span>
+              <span class="discount__newPrice">184000đ</span>
             </h3>
             <div class="discount__stars">
               <img src="../img/3star.svg" alt="3star" />
