--- a/pages/login.html
+++ b/pages/login.html
@@ -17,28 +17,41 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <div class="main">  	
-      <input type="checkbox" id="chk" aria-hidden="true">
-  
-        <div class="signup">
-          <form>
-            <label for="chk" aria-hidden="true">Đăng ký</label>
-            <input type="text" name="txt" placeholder="User name" required="">
-            <input type="email" name="email" placeholder="Email" required="">
-            <input type="password" name="pswd" placeholder="Password" required="">
-            <button>Đăng ký</button>
-          </form>
-        </div>
-  
-        <div class="login">
-          <form>
-            <label for="chk" aria-hidden="true">Đăng nhập</label>
-            <input type="email" name="email" placeholder="Email" required="">
-            <input type="password" name="pswd" placeholder="Password" required="">
-            <button><a href="../index.html">Đăng nhập</a></button>
-          </form>
-        </div>
-    </div>
+    <div class="main">
+      <input type="checkbox" id="chk" aria-hidden="true" />
+
+      <div class="signup">
+        <form>
+          <label for="chk" aria-hidden="true">Đăng ký</label>
+          <input
+            type="text"
+            name="txt"
+            placeholder="Tên đăng nhập"
+            required=""
+          />
+          <input type="email" name="email" placeholder="Email" required="" />
+          <input
+            type="password"
+            name="pswd"
+            placeholder="Mật khẩu"
+            required=""
+          />
+          <button>Đăng ký</button>
+        </form>
+      </div>
+      <div class="login">
+        <form>
+          <label for="chk" aria-hidden="true">Đăng nhập</label>
+          <input type="email" name="email" placeholder="Email" required="" />
+          <input
+            type="password"
+            name="pswd"
+            placeholder="Mật khẩu"
+            required=""
+          />
+          <button><a href="../index.html">Đăng nhập</a></button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
