--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
       <input type="checkbox" id="chk" aria-hidden="true" />
 
       <div class="signup">
-        <form>
+        <form method="POST" netlify>
           <label for="chk" aria-hidden="true">Đăng ký</label>
           <input
             type="text"
