--- a/pages/contact.html
+++ b/pages/contact.html
@@ -164,7 +164,7 @@
       <div class="container">
         <h3 class="form__title">Liên hệ</h3>
         <div class="form__wrapper">
-          <form name="contactform">
+          <form name="contactform" method="POST" netlify>
             <div class="form__group">
               <label for="firstName">Họ</label>
               <input
