--- a/pages/login.html
+++ b/pages/login.html
@@ -36,7 +36,7 @@
             placeholder="Mật khẩu"
             required=""
           />
-          <button onclick="return alert('Đăng ký thành công!')">Đăng ký</button>
+          <button>Đăng ký</button>
         </form>
       </div>
       <div class="login">
