--- a/pages/contact.html
+++ b/pages/contact.html
@@ -199,9 +199,7 @@
                 required
               ></textarea>
             </div>
-            <button type="submit" class="btn primary-btn" onclick="send()">
-              Gửi
-            </button>
+            <button type="submit" class="btn primary-btn">Gửi</button>
           </form>
         </div>
       </div>
