--- a/pages/booking.html
+++ b/pages/booking.html
@@ -148,6 +148,10 @@
               <input type="email" id="email" name="Email" required />
             </div>
             <div class="form__group">
+              <label for="sdt">Số điện thoại</label>
+              <input type="text" id="sdt" name="Số điện thoại" required />
+            </div>
+            <div class="form__group">
               <label for="tableType">Loại Bàn</label>
               <select name="Loại Bàn" id="tableType" required>
                 <option selected disabled>Chọn</option>
