--- a/pages/contact.html
+++ b/pages/contact.html
@@ -171,21 +171,39 @@
                 type="text"
                 class="form"
                 id="firstName"
-                name="1"
+                name="Họ"
                 required
               />
             </div>
             <div class="form__group">
               <label for="lastName">Tên</label>
-              <input type="text" class="form" id="lastName" name="1" required />
+              <input
+                type="text"
+                class="form"
+                id="lastName"
+                name="Tên"
+                required
+              />
             </div>
             <div class="form__group">
               <label for="email">Email</label>
-              <input type="email" class="form" id="email" name="1" required />
+              <input
+                type="email"
+                class="form"
+                id="email"
+                name="Email"
+                required
+              />
             </div>
             <div class="form__group">
               <label for="Chủ đề">Chủ đề</label>
-              <input type="text" class="form" id="subject" name="1" required />
+              <input
+                type="text"
+                class="form"
+                id="subject"
+                name="Chủ đề"
+                required
+              />
             </div>
             <div class="form__group form__group__full">
               <label for="message">Nội dung</label>
@@ -193,7 +211,7 @@
                 name="1"
                 id="message"
                 class="form"
-                name="message"
+                name="Tin nhắn"
                 cols="30"
                 rows="10"
                 required
