--- a/pages/login.html
+++ b/pages/login.html
@@ -25,14 +25,14 @@
           <label for="chk" aria-hidden="true">Đăng ký</label>
           <input
             type="text"
-            name="txt"
+            name="Tên đăng nhập"
             placeholder="Tên đăng nhập"
             required=""
           />
-          <input type="email" name="email" placeholder="Email" required="" />
+          <input type="email" name="Email" placeholder="Email" required="" />
           <input
             type="password"
-            name="pswd"
+            name="Mật khẩu"
             placeholder="Mật khẩu"
             required=""
           />
